--- a/Natural Disasters Web Api/appsettings.json
+++ b/Natural Disasters Web Api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+     "mysqldb": "server = localhost; Port = 3306; Database = naturaldisasters; Username = root; Password = Tayna123#;"
+      },
+
+      "Logging": {
+        "LogLevel": {
+          "Default": "Information",
+          "Microsoft.AspNetCore": "Warning"
+        }
+      },
+      "AllowedHosts": "*"
     }
-  },
-  "AllowedHosts": "*"
-}
